# csdr-cloud-spatial

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  datasets-gmw-v3.yaml  debug.sh  debug_geoms_tiled.geojson  debug_seagrass_error.sh  debugging_dataset_eez-v4_notes.md  dvc.yaml  entrypoint.sh  error.txt  how_to_debug_dockerised_code.md  how_to_run_dataset_eez-v4_workflow.md  pyproject.toml  requirements.txt  simple-cli-run-local-instructions.md
.github/workflows/: build-test-docker.yml
csdr/: __init__.py  app_integration.py  brisbane_aoi.gejson  cli.py  cli_conversion.py  cli_dataset_aca.py  cli_dataset_ace.py  cli_dataset_buildings.py  cli_dataset_gmw.py  cli_dataset_partition_parquets.py  cli_dataset_seagrass.py  cli_dataset_stac.py  cli_dataset_zip_cogs.py  cli_dataset_zip_shp.py  cli_datasets.py  cli_dvc.py  cli_geometries.py  cli_geometry_acsc2.py  cli_geometry_aus_states.py  cli_geometry_cwa.py  cli_geometry_eez.py  cli_helpers.py  cli_products.py  cli_provenance.py  cli_vector_cube.py  geometries.py  io.py  partition_parquet_grid.py  products.py  provenance.py  sedona_test2.py  sedona_test_partition.py  testing_parquet_pyarrow.py  testing_parquet_sedona.py  utils.py  world_aoi.geojson
csdr/minimal_version/: Dockerfile.minimal  Dockerfile.minimal.uv  run.sh  test.py
datasets/: dvc.yaml
datasets/allen-coral-atlas/: dvc.yaml  params.yaml  provenance.json
datasets/allen-coral-atlass/: dvc.yaml  params.yaml  provenance.json
datasets/australian-coastal-ecosystem/: README.md  dvc.yaml  params.yaml  provenance.json
datasets/global-mangrove-watch-annual-extent/: README.md  dvc.yaml  notebook.ipynb  params.yaml  provenance.json  test.ipynb
datasets/tayaritja-seagrass/: README.md  dvc.yaml  params.yaml  provenance.json
datasets/test/: dvc.yaml  params.yaml
docs/: create-dataset.md  create-geometry.md  create-product.md  simple-cli-run-local-instructions.md
examples/global-mangrove-watch/: Load_from_parquet.ipynb  abs-asgs-ste.ipynb
geometries/: dvc.yaml
geometries/abs-asgs-edition-3/: README.md  dvc.yaml  notebook.ipynb  params.yaml  provenance.json
geometries/acsc-ga-2015/: README.md  dvc.yaml  params.yaml  provenance.json
geometries/marine-regions-eez/: README.md  dvc.yaml  params.yaml  provenance.json
notebooks/: API_Example_DEP-Mangroves.ipynb  API_Example_colab_key.ipynb  API_Examples.ipynb  Test_GMW_EEZ.ipynb  aca_export_xee.ipynb  aca_export_xee_small.ipynb  create_pmtiles.ipynb  fiji_antimeridian_debugging copy.ipynb  fiji_antimeridian_debugging.ipynb  fiji_antimeridian_debugging_v3.ipynb  publish_ace_to_api.ipynb  sdf-public-api-demo.ipynb  sdf_public_api_demo.ipynb  test_gmw_v4_acsc2.ipynb  test_gmw_v4_acsc2_reproduce.ipynb
products/allen-coral-atlas/: dvc.yaml  params.yaml  test.ipynb
products/australian-coastal-ecosystem/: dvc.yaml  params.yaml  provenance.json
products/global-mangrove-watch-annual-extent/: .gitignore  dvc.yaml  notebook.ipynb  params.yaml  provenance.json
products/tayaritja-seagrass/: dvc.yaml  params.yaml  provenance.json
products/vector-data-cube-statistics/: notebook.ipynb
scripts/: validate_geoparquet.py  validate_zarr.py
tests/: conftest.py  test_geometry.py  test_io.py  test_product.py  test_provenance.py
tests/data/: dep_s2_seagrass.parquet  many_geometries.geojson  single_geometry.geojson  single_geometry.parquet  single_geometry.parquet.provenance.json  single_geometry2.geojson
tests/data/gmw/: GMW_N00E008_v4019_mng.stac-item.json  gmw.parquet  gmw.parquet.provenance.json  gmw_new.parquet
