[project]
name = "csdr-pipeline"
dynamic = ["version"]
description = "CSDR data processing pipeline tooling"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Alex Leith", email = "alex@auspatious.com" },
    { name = "Nick Forbes-Smith", email = "nick@forbes-smith.com" },
]
keywords = ["data"]

dependencies = [
    "bokeh==3.7.2",
    "boto3==1.37.1",
    "dask==2025.3.0",
    "distributed==2025.3.0",
    "dvc==3.59.1",
    "dvc-s3==3.2.0",
    "exactextract==0.2.1",
    "folium==0.19.5",
    "geopandas==1.0.1",
    "hatchling==1.27.0",
    "hatch-vcs==0.4.0",
    "matplotlib==3.10.1",
    "odc-stac==0.3.11",
    "odc-geo==0.4.10",
    "pandas==2.2.3",
    "pyarrow==19.0.1",
    "pystac==1.12.2",
    "pystac-client==0.8.6",
    "requests==2.32.3",
    "rio-stac==0.10.1",
    "rioxarray==0.18.2",
    "s3fs==2025.3.2",
    "scipy==1.15.2",
    "shapely==2.0.7",
    "typer==0.15.2",
    "xarray==2025.3.1",
    "xvec==0.3.1",
    "zarr==3.0.6"
]

[project.optional-dependencies]
dev = ["poetry", "bokeh", "folium", "jinja2", "matplotlib"]

[project.scripts]
csdr = "csdr.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "csdr/_version.py"

[tool.hatch.build]
include = ["csdr/**.py"]

[tool.hatch.build.targets.wheel]
packages = ["csdr"]

[tool.ruff]
ignore = ["E501"]
