[project]
name = "csdr-pipeline"
dynamic = ["version"]
description = "CSDR data processing pipeline tooling"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Alex Leith", email = "alex@auspatious.com" },
    { name = "Nick Forbes-Smith", email = "nick@forbes-smith.com" },
]
keywords = ["data"]

dependencies = [
    "bokeh",
    "boto3",
    "click",
    "dask",
    "distributed",
    "dvc",
    "dvc-s3",
    "fiona",
    "folium",
    "geopandas",
    "hatchling",
    "hatch-vcs",
    "loguru",
    "matplotlib",
    "nest_asyncio",
    "obstore",
    "odc-loader",
    "odc-stac",
    "odc-geo",
    "pandas",
    "pyarrow",
    "pystac",
    "pystac-client",
    "requests",
    "rustac",
    "rio-stac",
    "rioxarray",
    "s3fs",
    "scipy",
    "shapely",
    "typer",
    "xarray",
    "xvec",
    "zarr"
]

[project.optional-dependencies]
dev = [
    "poetry",
    "bokeh",
    "folium",
    "jinja2",
    "matplotlib",
    "ruff",
    "moto[server]",
    "mypy",
    "types-requests",
    "types-PyYAML",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[project.scripts]
csdr = "csdr.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "csdr/_version.py"

[tool.hatch.build]
include = ["csdr/**.py"]

[tool.hatch.build.targets.wheel]
packages = ["csdr"]

[tool.ruff]
ignore = ["E501"]
fix = true

[tool.ruff.lint]
extend-select = ["ANN", "I", "RUF", "UP"]

[tool.mypy]
ignore_missing_imports = true
strict = true
